--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -23,7 +23,7 @@
 #ask_sudo_pass = True
 #ask_pass      = True
 #transport      = smart
-#remote_port    = 22
+remote_port    = 18922
 #module_lang    = C
 #module_set_locale = False
 
