--- a/ansible/roles/master_02/tasks/main.yml
+++ b/ansible/roles/master_02/tasks/main.yml
@@ -1,16 +1,26 @@
 ---
-  - name: 加入kubernetes 集群
-    command: "{{ hostvars[groups.k8s_master_first[0]]['kubernetes_join_token'] }} --control-plane"
-    ignore_errors: true
+- name: 获取join-command脚本
+  copy:
+    src: /tmp/join-cluster-token-master.sh
+    dest: "/tmp/{{ item }}"
+    group: root
+    owner: root
+    mode: 755
+  with_items:
+    - join-cluster-token-master.sh
 
-  - block:
-    - file: "path=/root/.kube state=directory"
-    - name: 权限认证
-      copy: src=/etc/kubernetes/admin.conf dest=/root/.kube/config
+- name: ==Master节点加入集群==
+  shell: "sh /tmp/join-cluster-token-master.sh"
 
-  - name: s.1查看节点信息
-    shell: 'kubectl get nodes'
-    register: check
+- name: work dir
+  file: path=/root/.kube state=directory
 
-  - name: s.2查看节点信息
-    debug: var=check.stdout verbosity=0
+- name: 权限认证
+  copy: src=/etc/kubernetes/admin.conf dest=/root/.kube/config
+
+- name: s.1查看节点信息
+  shell: 'kubectl get nodes'
+  register: check
+
+- name: s.2查看节点信息
+  debug: var=check.stdout verbosity=0
