--- a/ansible/roles/master_01/tasks/main.yml
+++ b/ansible/roles/master_01/tasks/main.yml
@@ -24,3 +24,7 @@
   ignore_errors: yes
   when: flannel_install == 1
 
+- name: 设置kubectl自动补全
+  lineinfile:
+    dest: ~/.bashrc
+    line: "source <(kubectl completion bash)"
